[workspace]
members = [
    "pubsub-common",
    "pubsub-proto",
    "pubsub-core",
    "floodsub",
    "testlib",
]
resolver = "2"

[workspace.package]
rust-version = "1.66.0"
license = "Apache-2.0"
repository = "https://github.com/LNSD/rust-libp2p-pubsub"

[workspace.dependencies]
assert_matches = "1.5.0"
bytes = "1.5.0"
futures = "0.3.28"
libp2p = "0.52.3"
thiserror = "1.0.48"
tokio = "1.32.0"
tracing = "0.1.37"
