[package]
name = "common-test"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_matches.workspace = true
futures.workspace = true
hex = "0.4.3"
libp2p = { workspace = true, features = ["secp256k1", "noise", "yamux"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { workspace = true, features = ["macros", "time"] }
