[package]
name = "common-test"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_matches.workspace = true
futures.workspace = true
hex = "0.4.3"
libp2p = { workspace = true, features = ["secp256k1", "yamux", "plaintext"] }
tokio = { workspace = true, features = ["macros", "time"] }
tracing.workspace = true
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
