[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
prost_codec = ["dep:prost", "dep:asynchronous-codec"]
quick_protobuf_codec = ["dep:quick-protobuf", "dep:asynchronous-codec"]

[dependencies]
asynchronous-codec = { version = "0.6.1", optional = true }
bytes = "1.4.0"
prost = { version = "0.11.9", optional = true }
quick-protobuf = { version = "0.8", optional = true }
thiserror = { workspace = true }
unsigned-varint = { version = "0.7.1", features = ["asynchronous-codec"] }
