[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace = true
futures-ticker = "0.0.3"
hashlink = "0.8.4"
instant = "0.1.12"
libp2p.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
sha2 = "0.10.7"
tokio = { workspace = true, features = ["rt", "time", "macros"] }
