[package]
name = "floodsub"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
libp2p = { workspace = true, features = ["macros"] }
pubsub = { version = "0.1.0", path = "../pubsub" }
tracing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
common-test = { version = "0.1.0", path = "../common-test" }
futures.workspace = true
itertools = "0.11.0"
libp2p = { workspace = true, features = ["gossipsub", "tokio", "yamux", "plaintext", "secp256k1", "tcp", "dns"] }
rand = "0.8.5"
tokio = { workspace = true, features = ["rt", "macros"] }
tracing.workspace = true
tracing-futures = "0.2.5"
void = "1.0.2"

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
