[package]
name = "libp2p-pubsub-floodsub"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { workspace = true, features = ["macros"] }
libp2p-pubsub-common = { version = "0.1.0", path = "../pubsub-common" }
libp2p-pubsub-core = { version = "0.1.0", path = "../pubsub-core" }
tracing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
testlib = { version = "0.1.0", path = "../testlib" }
futures.workspace = true
itertools = "0.11.0"
libp2p = { workspace = true, features = ["gossipsub", "floodsub", "tokio", "yamux", "plaintext", "secp256k1", "tcp", "dns"] }
rand = "0.8.5"
tokio = { workspace = true, features = ["rt", "macros"] }
tracing.workspace = true
tracing-futures = "0.2.5"
void = "1.0.2"

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
