[package]
name = "libp2p-pubsub-common"
description = "Common utilities and traits for rust-libp2p pubsub protocols."
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
readme = "../meta/README.md"

[dependencies]
futures.workspace = true
futures-ticker = "0.0.3"
hashlink = "0.8.4"
instant = "0.1.12"
trait-set = "0.3.0"

[dev-dependencies]
assert_matches.workspace = true
sha2 = "0.10.8"
tokio = { workspace = true, features = ["rt", "time", "macros"] }
