[package]
name = "libp2p-pubsub-core"
description = "Core traits and types for the rust-libp2p-pubsub protocols."
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
readme = "../meta/README.md"

[dependencies]
anyhow = "1.0.75"
asynchronous-codec = "0.6.2"
base64 = "0.21.4"
bytes.workspace = true
futures.workspace = true
hex_fmt = "0.3.0"
itertools = "0.11.0"
libp2p.workspace = true
libp2p-pubsub-common = { version = "0.1.0", path = "../pubsub-common" }
libp2p-pubsub-proto = { version = "0.1.0", path = "../pubsub-proto" }
prost = "0.12.1"
sha2 = "0.10.8"
smallvec = "1.11.1"
thiserror.workspace = true
tracing.workspace = true
trait-set = "0.3.0"
unsigned-varint = { version = "0.7.2", features = ["asynchronous_codec"] }

[dev-dependencies]
assert_matches.workspace = true
testlib = { path = "../testlib" }
rand = "0.8.5"
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-futures = "0.2.5"
