[package]
name = "libp2p-pubsub-proto"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enable to run protobuf messages code generation at compile time (requires Buf CLI, protoc, etc.).
proto-gen = []

[dependencies]
prost = "0.12.0"
