[package]
name = "libp2p-pubsub-proto"
description = "Protocol Buffers definitions for the rust-libp2p pubsub protocols."
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
readme = "../meta/README.md"

[features]
# Enable to run protobuf messages code generation at compile time (requires Buf CLI, protoc, etc.).
proto-gen = []
# Enable to run protobuf messages documentation generation at compile time (requires protoc, protoc-gen-doc, etc.).
proto-gen-doc = []

[dependencies]
prost = "0.12.0"
