[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
asynchronous-codec = "0.6.2"
base64 = "0.21.3"
bytes.workspace = true
common = { version = "0.1.0", path = "../common", features = ["prost_codec"] }
futures.workspace = true
hex_fmt = "0.3.0"
libp2p.workspace = true
prost.workspace = true
sha2 = "0.10.7"
smallvec = "1.11.0"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
common-test = { path = "../common-test" }
itertools = "0.11.0"
rand = "0.8.5"
tokio = { workspace = true, features = ["macros", "rt"] }
