[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
asynchronous-codec = "0.6.2"
base64 = "0.21.3"
bytes.workspace = true
common = { version = "0.1.0", path = "../common" }
futures.workspace = true
hex_fmt = "0.3.0"
libp2p.workspace = true
prost = "0.12.0"
sha2 = "0.10.7"
smallvec = "1.11.0"
thiserror.workspace = true
tracing.workspace = true
trait-set = "0.3.0"
unsigned-varint = { version = "0.7.1", features = ["asynchronous-codec"] }

[dev-dependencies]
assert_matches.workspace = true
common-test = { path = "../common-test" }
itertools = "0.11.0"
rand = "0.8.5"
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-futures = "0.2.5"
