[package]
name = "testlib"
description = "Test utilities and helpers functions for testing rust-libp2p pubsub protocols"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
assert_matches.workspace = true
futures.workspace = true
futures-test = "0.3.28"
hex = "0.4.3"
libp2p = { workspace = true, features = ["secp256k1", "yamux", "plaintext"] }
libp2p-pubsub-common = { version = "0.1.0", path = "../pubsub-common" }
libp2p-pubsub-core = { version = "0.1.0", path = "../pubsub-core" }
libp2p-pubsub-floodsub = { version = "0.1.0", path = "../floodsub" }
rand = "0.8.5"
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing.workspace = true
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
